--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:precis-ui": "node dist/precis-ui/server/server.mjs"
+    "serve:ssr:precis-ui": "node dist/precis-ui/server/server.mjs",
+    "serve:prod": "npm run build && npm run serve:ssr:precis-ui"
   },
   "prettier": {
     "printWidth": 100,
